# GRPC-communication-

./: .gitignore  docker-compose.yml
cdc-service/: Dockerfile  pom.xml
cdc-service/src/main/java/com/grpc/cdc/: CdcGrpcClient.java  CdcService.java
cdc-service/src/main/proto/pipeline/: message.proto
cdc-service/src/main/resources/: log4j.properties
certs/: ca.pem  cdc-service-key.pem  cdc-service.pem  gen-certs.sh  server-a.pem  server-b.pem
encryption-server/: Cargo.toml  Dockerfile
encryption-server/src/: main.rs
frontend-a/: package-lock.json  package.json
frontend-a/app/: layout.js  page.js
frontend-b/: package-lock.json  package.json
frontend-b/app/: layout.js  page.js
frontend-b/app/api/messages/: route.js
middleware/: Cargo.toml  Dockerfile  build.rs
middleware/proto/: message.proto
middleware/src/: db.rs  grpc_server.rs  main.rs
node-server/: Dockerfile  data-store.js  grpc-server.js  package.json  start.js
node-server/app/: globals.css  layout.js  page.js
node-server/app/api/data/: route.js
node-server/proto/: message.proto
postgres/: Dockerfile  init.sql
proto/: message.proto
server-a/: Cargo.toml  Dockerfile  build.rs
server-a/src/: main.rs
server-b/: Cargo.toml  Dockerfile
server-b/src/: main.rs
