[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
